Minor fixes: - Avatar: set border radius to 50% - Profile: removed edit/ addPost handlers and profilePage prop - ProfilePage: put the profile image in a div so that it is no longer stretching

--- a/src/components/Avatar.module.css
+++ b/src/components/Avatar.module.css
@@ -1,5 +1,5 @@
 .Avatar {
-  border-radius: 20px;
+  border-radius: 50%;
   margin: 0px 5px;
   object-fit: cover;
 }
